--- a/html-files/about.html
+++ b/html-files/about.html
@@ -13,7 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/about.css" rel="stylesheet">
     <script src="../js/about.js"></script>
+
 </head>
 <body>
 <header>
@@ -56,6 +58,31 @@
 </header>
 <div class="container-fluid searchbaranimation" id="searchbar">
     <input type="text" class="searchbox" placeholder="Search..">
+</div>
+<div class="container-fluid margintop grey">
+    <div class="container">
+        <div class="row text-center d-flex justify-content-center align-item-center textfly">
+            <div class="col-12" id="topcontainer">
+                <div id="photo">
+                    <div id="photocontainer"></div>
+                </div>
+            </div>
+            <div class="col-12">
+                <br><br>
+                <h1><span id="timegreeting"></span></h1>
+                <p>Welcome to about me page ,know more about me ! :)</p>
+                <img  onclick="window.location.href='future.html#daaareflection';" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+            </div>
+        </div>
+
+    </div>
+</div>
+<div class="container margintop">
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
