About Me Page 1.5/2

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -125,14 +125,11 @@
 
     })
 </script>
-<div class="container-fluid margintop grey">
+<div class="container-fluid margintop grey" id="quotesection">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <div class="contain">
-            <h1><span style="color:forestgreen"> Personality</span></h1>
-                <p></p>
-                </div>
+<img src="../aboutmephoto/use.jpg" alt="look at sky" id="photofly" class="textfly" style="height:500px;    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
             </div>
             <div class="col-md-6 col-sm-12 text-end">
                 <div class="contain">
@@ -158,28 +155,224 @@
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <h1><span style="color:darkcyan">Education</span> Background</h1>
-            <p></p>
+            <p>I am previously a student in Dunearn Secondary School and currently a student in Singapore Polytechnic </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end">
-
+            <br><br>
+            <table class="table table-bordered border-dark table-hover table-responsive">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Education Institute </th>
+                    <th scope="col">Year Of Study</th>
+                    <th scope="col">Stream</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Lakeside Primary School</td>
+                    <td>2011-2016</td>
+                    <td>Standard</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Dunearn Secondary School</td>
+                    <td>2017-2020</td>
+                    <td>Express</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td >Singapore Polytechnic</td>
+                    <td >2021-2023</td>
+                    <td>SOC DAAA</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
 <div class="container-fluid margintop grey">
     <div class="row">
+        <div class="col-md-12 col-sm-12 text-center">
+            <h1><span style="color:goldenrod">Achievements</span> and <span style="color:brown">Certification</span></h1>
+            <p></p>
+            <br><br>
+        </div>
         <div class="col-md-6 col-sm-12">
+            <table class="table table-bordered border-dark table-hover table-responsive table-sm">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Competition </th>
+                    <th scope="col">Award</th>
+                    <th scope="col">Year Of Participation</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>SGInnovate's Deep Tech Movers Challenge 2021 </td>
+                    <td>Second Place</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Big Science Competition 2020 Year 10</td>
+                    <td>Distinction</td>
+                    <td>2020</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>ICAS Mathematics Competition 2018 </td>
+                    <td>Distinction</td>
+                    <td>2018</td>
+                </tr>
+
+
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Australian Mathematics Competition 2017</td>
+                    <td>Distinction</td>
+                    <td>2017</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">5</th>
+                    <td>NPCC Unit Overall Proficiency Award 2020</td>
+                    <td>Gold</td>
+                    <td>2020</td>
+                </tr>
+
+
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Certificate of Merit for Student Leadership 2020</td>
+                    <td>Merit</td>
+                    <td>2020</td>
+                </tr>
+
+
+
+                <tr>
+                    <th scope="row">7</th>
+                    <td> Edusave Certificate Of Academic Achievement 2020</td>
+                    <td>Edusave</td>
+                    <td>2020</td>
+                </tr>
+
+
+                <tr>
+                    <th scope="row">8</th>
+                    <td>Edusave Certificate Of Academic Achievement 2019</td>
+                    <td>Edusave</td>
+                    <td>2019</td>
+                </tr>
+
+
+                <tr>
+                    <th scope="row">9</th>
+                    <td>CDC-CCC Education Merit Award 2020</td>
+                    <td>Edusave</td>
+                    <td>2020</td>
+                </tr>
+
+
+                <tr>
+                    <th scope="row">10</th>
+                    <td>Edusave Award, For Achievement, Good Leadership And Service 2020</td>
+                    <td>Edusave</td>
+                    <td>2020</td>
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td> Edusave Scholarship 2018</td>
+                    <td>Edusave</td>
+                    <td>2018</td>
+                </tr>
+                <tr>
+                    <th scope="row">12</th>
+                    <td> Edusave Character Award 2018</td>
+                    <td>Edusave</td>
+                    <td>2018</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">13</th>
+                    <td> Edusave Scholarship 2017</td>
+                    <td>Edusave</td>
+                    <td>2017</td>
+                </tr>
+
+
+
+
+
+
+
+
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <table class="table table-bordered border-dark table-hover table-responsive table-sm">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Certification And Skills</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Year of Attainment</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Diploma In Applied AI and Analytics </td>
+                    <td>Currently Studying</td>
+                    <td>NA</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Google UX Design Professional Certificate</td>
+                    <td>Currently Studying</td>
+                    <td>NA</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Specialization Certificates in 程序设计与算法</td>
+                    <td>Currently Studying</td>
+                    <td>NA</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>C Certified Entry-Level Programmer Certification </td>
+                    <td>Attained</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Singapore-Cambridge General Certificate Of Education Ordinary Level </td>
+                    <td>Attained</td>
+                    <td>2020</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Primary School Leaving Examination Certificate</td>
+                    <td>Attained</td>
+                    <td>2016</td>
+                </tr>
+
+                </tbody>
+            </table>
 
         </div>
-        <div class="col-md-6 col-sm-12">
-            <h1>Achievements and Certification</h1>
-            <p></p>
-        </div>
+
     </div>
 </div>
 <div class="container margintop ">
     <div class="row">
         <div class="col-sm-12 col-md-12 text-center">
-            <h1>Testimonials</h1>
+            <h1 style="color:slateblue">Testimonials</h1>
             <p></p>
         </div>
         <div class="col"></div>
@@ -194,7 +387,32 @@
         <div class="row">
 
             <div class="col-12">
-                <h1><span style="color:gold">Contact</span> Me</h1>
+                <h1><span style="color:slategrey">Contact</span> Me</h1>
+                <br>
+            </div>
+            <div class="  col-lg-12">
+                <div class="card mb-3" style="background-color: white;">
+                    <div class="row">
+                        <div class="col-lg-7 col-sm-12 d-flex" style="width:500px;height:386px;">
+                            <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" style="max-width:600px;"   alt="...">
+                        </div>
+                        <div class="offset-lg-1 col-lg-4 col-sm-12" >
+
+                            <div class="card-body" style="width:400px;" >
+                                <h3 class="card-text">CHEN ZHUOFAN 陈卓凡</h3>
+                                <p class="card-text">School Of Computing | DAAA/FT/1A/04</p>
+                                <p class="card-text"><strong>Contact:</strong></p>
+                                <p class="card-text">+65 83836591 || +65 97989836</p>
+                                <p class="card-text">zhuofan.21@ichat.sp.edu.sg </p>
+                                <p><strong>Address:</strong></p>
+                                <p class="card-text">Singapore Polytechnic<br>
+                                    500 Dover Road<br>
+                                    Singapore 139651</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
