--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -239,7 +239,7 @@
           <br><br>
             </div>
             <div class="col-md-12 col-sm-12">
-                <table class="table table-hover table-bordered border-dark  table-responsive table-sm">
+                <table class="table table-hover table-bordered border-dark  table-responsive">
                     <thead>
                     <tr>
                         <th scope="col">Leadership Development</th>
