Add support for testimonial viewing

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -193,6 +193,7 @@
     </div>
 </div>
 <div class="container-fluid margintop grey">
+    <div class="container">
     <div class="row">
         <div class="col-md-12 col-sm-12 text-center">
             <h1><span style="color:goldenrod">Achievements</span> and <span style="color:brown">Certification</span></h1>
@@ -368,6 +369,7 @@
         </div>
 
     </div>
+    </div>
 </div>
 <div class="container margintop ">
     <div class="row">
@@ -375,10 +377,122 @@
             <h1 style="color:slateblue">Testimonials</h1>
             <p></p>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../testimonialpdf/sgc.png" class="card-img-top" style="height:50%;" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonial 1</h5>
+                        <p class="card-text">Written by Dunearn Secondary School</p>
+                        <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#exampleModal" data-bs-target="#exampleModal">View</button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Secondary Graduation Testimonial</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p><strong>Transcript of document</strong></p>
+                                        <iframe style="width:100%;height:500px;" id="testimonial1" src="https://docs.google.com/viewer?url=https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/SGC.pdf&embedded=true"></iframe>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button onclick="window.location.href='https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/SGC.pdf'" type="button" class="btn btn-primary">Download</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../testimonialpdf/test1.png" class="card-img-top" style="height:50%;" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonial 2</h5>
+                        <p class="card-text">Written by Ms Sarah Chan</p>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"  data-target="#Modal1"  data-bs-target="#Modal1">View</button>
+                        <div class="modal fade" id="Modal1" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel2">Testimonial 2</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p><strong>Transcript of document</strong></p>
+                                        <iframe style="width:100%;height:500px;" id="testimonial2" src="https://docs.google.com/viewer?url=https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/Mschantestimonial.pdf&embedded=true"></iframe>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" onclick="window.location.href='https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/Mschantestimonial.pdf'" class="btn btn-primary">Download</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../testimonialpdf/test2.png" class="card-img-top" style="height:50%;" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonial 3</h5>
+                        <p class="card-text">Written by Ms Chua Sock Sian</p>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#Modal2"  data-bs-target="#Modal2">View</button>
+                        <div class="modal fade" id="Modal2" tabindex="-1" aria-labelledby="exampleModalLabel5" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel5">Testimonial 3</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p><strong>Transcript of document</strong></p>
+                                        <iframe style="width:100%;height:500px;" id="testimonial3" src="https://docs.google.com/viewer?url=https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/testimonial3.pdf&embedded=true"></iframe>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button onclick="window.location.href='https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/testimonial3.pdf'"  type="button" class="btn btn-primary">Download</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="../testimonialpdf/test3.png" style="height:50%;" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonial 4</h5>
+                        <p class="card-text">Written by Mr Lee Kong Huat</p>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#Modal4"  data-bs-target="#Modal4">View</button>
+                        <div class="modal fade" id="Modal4" tabindex="-1" aria-labelledby="exampleModalLabel6" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel6">Testimonial 4</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p><strong>Transcript of document</strong></p>
+                                        <iframe style="width:100%;height:500px;" id="testimonial4" src="https://docs.google.com/viewer?url=https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/Mrlee.pdf&embedded=true"></iframe>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" onclick="window.location.href='https://github.com/zhuofan-16/hanpdf/raw/main/testimonialpdf/Mrlee.pdf'"  class="btn btn-primary">Download</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
 </div>
@@ -391,12 +505,12 @@
                 <br>
             </div>
             <div class="  col-lg-12">
-                <div class="card mb-3" style="background-color: white;">
+                <div class="card mb-3" style="border:0;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
                     <div class="row">
-                        <div class="col-lg-7 col-sm-12 d-flex" style="width:500px;height:386px;">
-                            <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" style="max-width:600px;"   alt="...">
+                        <div class="col-lg-7 col-sm-12 d-flex" >
+                            <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" class="img-fluid"  alt="...">
                         </div>
-                        <div class="offset-lg-1 col-lg-4 col-sm-12" >
+                        <div class="col-lg-5 col-sm-12" >
 
                             <div class="card-body" style="width:400px;" >
                                 <h3 class="card-text">CHEN ZHUOFAN 陈卓凡</h3>
