fulfill feedback wall function

--- a/secondaryschoolphoto/新建文本文档.html
+++ b/secondaryschoolphoto/新建文本文档.html
@@ -18,6 +18,12 @@
 html{
     background: #6b5b95;
 }
+#feedbackwall::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
+#feedbackwall{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
+}
 
 @keyframes spinday { 100% {  transform:rotate(360deg); } }
 @keyframes spinnight { 100% {  transform:rotate(180deg); } }
@@ -25,43 +31,45 @@ html{
 
 </head>
 <body>
-<div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                School Graduation Testimonial
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <iframe style="width:100%;height:500px;" id="testimonial1" src="../testimonialpdf/SGC.pdf"></iframe>
+<div class="container" id="feedbackwall" style="width:696px;height:500px;background:url('../feedback/-5cccef97adb33ba1.jpg');overflow: scroll;">
+    <div class="row row-cols-3 row-cols-md-3 " id="tr">
+        <div class="col">
+        <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header"><img src="../profilepic/profile.jpg" style="height:30px;" class="rounded me-2" alt="ZhuoFan">ZhuoFan</div>
+            <div class="card-body">
+                <p class="card-text">Excellent Website,I am so impressed by the design and layout of it.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Sat Jun 12 2021 11:29:44 GMT+0800 (中国标准时间)</small>
             </div>
         </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Teachers Testimonial 1
-            </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <iframe style="width:100%;height:500px;" id="testimonial2" src="../testimonialpdf/Mschantestimonial.pdf"></iframe>
+        </div>
+        <div class="col">
+            <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+
+                <div class="card-header">   <img src="../feedback/1b935eaf194bb173.jpg" style="height:30px;"  class="rounded me-2" alt="JiaCheng">Jia Cheng</div>
+                <div class="card-body">
+
+                    <p class="card-text">This is the first website that have extremely amazed me,I never visit such a nice one</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Sat Jun 12 2021 12:21:26 GMT+0800 (中国标准时间)</small>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Teachers Testimonial 2
-            </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <iframe style="width:100%;height:500px;" id="testimonial3" src="../testimonialpdf/testimonial3.pdf"></iframe>
-            </div>
+
         </div>
-    </div>
 </div>
+
+
+</div>
+<form>
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="comment">Comment:</label><br>
+    <textarea id="comment" name="comment"
+              rows="5" cols="33"></textarea><br>
+    <input type="submit" id="submit" value="Submit">
+</form>
 </body>
 </html>
