--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/feedback.css" rel="stylesheet">
     <script src="../js/feedback.js"></script>
 </head>
 <body>
@@ -56,6 +57,52 @@
 </header>
 <div class="container-fluid searchbaranimation" id="searchbar">
     <input type="text" class="searchbox" placeholder="Search..">
+</div>
+<div class="container-fluid grey margintop">
+    <div class="container">
+        <div class="row ">
+            <div class="col-12">
+                <div class="container" id="feedbackwall" style="width:696px;height:500px;background:url('../feedback/-5cccef97adb33ba1.jpg');overflow: scroll;">
+                   <br>
+                    <div class="row row-cols-3 row-cols-md-3 " id="tr">
+                        <div class="col">
+                            <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+                                <div class="card-header"><img src="../profilepic/profile.jpg" style="height:30px;" class="rounded me-2" alt="ZhuoFan">ZhuoFan</div>
+                                <div class="card-body">
+                                    <p class="card-text">Excellent Website,I am so impressed by the design and layout of it.</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">Sat Jun 12 2021 11:29:44 GMT+0800 (中国标准时间)</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+
+                                <div class="card-header">   <img src="../feedback/1b935eaf194bb173.jpg" style="height:30px;"  class="rounded me-2" alt="JiaCheng">Jia Cheng</div>
+                                <div class="card-body">
+
+                                    <p class="card-text">This is the first website that have extremely amazed me,I never visit such a nice one</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">Sat Jun 12 2021 12:21:26 GMT+0800 (中国标准时间)</small>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-12 text-center ">
+                    <br><br>
+                    <h1>Feedback Wall</h1>
+                    <p>All feedback written will be shown at the wall above<br>Write your first feedback today!!</p>
+                    <img  onclick="window.location.href='about.html#aboutmeover;'" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
